# mcrpc

./: .gitignore  CMakeLists.txt  Pipfile  README.md  main.cpp  mcrpc.cpp  mcrpc.h  mcrpc.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: release.yml  release_assets.yml
